services/api/ext-edition.cnn.com/istio.yaml
# Define a ServiceEntry for edition.cnn.com:
apiVersion: networking.istio.io/v1alpha3
kind: ServiceEntry
metadata:
  name: cnn
spec:
  hosts:
    - edition.cnn.com
  ports:
    - number: 80
      name: http-port
      protocol: HTTP
    - number: 443
      name: https
      protocol: HTTPS
  resolution: DNS
---
# Create an egress Gateway for edition.cnn.com, port 80, and a destination rule for traffic directed to the egress gateway.
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: istio-egressgateway
spec:
  selector:
    istio: egressgateway
  servers:
    - port:
        number: 80
        name: http
        protocol: HTTP
      hosts:
        - edition.cnn.com
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: egressgateway-for-cnn
spec:
  host: istio-egressgateway.istio-system.svc.cluster.local
  subsets:
    - name: cnn
---
# Define a VirtualService to direct traffic from the sidecars to the egress gateway and from the egress gateway to the external service
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: direct-cnn-through-egress-gateway
spec:
  hosts:
    - edition.cnn.com
  gateways:
    - istio-egressgateway
    - mesh
  http:
    - match:
        - gateways:
            - mesh
          port: 80
      route:
        - destination:
            host: istio-egressgateway.istio-system.svc.cluster.local
            subset: cnn
            port:
              number: 80
          weight: 100
    - match:
        - gateways:
            - istio-egressgateway
          port: 80
      route:
        - destination:
            host: edition.cnn.com
            port:
              number: 80
          weight: 100
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ingress-web-api
spec:
  hosts:
    - "*"
  gateways:
    - gateway-ingress-http
  http:
    - match:
        - uri:
            prefix: /cnn
      rewrite:
        uri: "/"
      route:
        - destination:
            host: istio-egressgateway.istio-system.svc.cluster.local
            port:
              number: 80
    - match:
        - uri:
            exact: /cnn1
      rewrite:
        uri: /
        authority: edition.cnn.com
      route:
        - destination:
            host: edition.cnn.com
            port:
              number: 80
    # - match:
    #     - uri:
    #         prefix: /cnn4
    #   redirect:
    #     uri: /
    #     authority: edition.cnn.com
    #   route:
    #   - destination:
    #       host: edition.cnn.com
    #       port:
    #           number: 80
---
